-------------------------------------
	7.1-2
-------------------------------------
Fixed https://github.com/phpvirtualbox/phpvirtualbox/issues/350
Clonig VMs causes an error - Vm clonig is unuseable in phpvirtualbox

https://github.com/phpvirtualbox/phpvirtualbox/issues/341
AD Auth broken in PHP 8

Fixed MySQL Auth library

Updated install script

-------------------------------------
	7.1-1	2025-04-24
-------------------------------------
Project relocated back to phpvirtualbox github org

-------------------------------------
    7.1-0   2024-10-15
-------------------------------------
Virtualbox 7.1 support

-------------------------------------
    7.0-0 from Beta 1 to RC 1
-------------------------------------
Support for VirtualBox 7.0 and PHP8.2
Fixed clone option and encryption/decryption
Fixes for few small bugs

-------------------------------------
    6.0-0
-------------------------------------
Upgrade to Virtualbox 6.0

-------------------------------------
    5.2-1   2018-11-09
-------------------------------------
Various snapshot fixes and improvements - @Adam5Wu
Add a configuration variable to set the VRDE address - @rosorio
New icons to match Desktop Application - @der-eismann
Fix Import/Export - @tom077
Russian translation fixes - @SvetlanaTkachenko
Viewport and URL fixes - @krzysztof113
Convert to unix file format to reduce size

-------------------------------------
    5.2-0   2018-02-16
-------------------------------------
Long overdue post 5.0 support (5.2 at this stage)
PHP 7.1 support thanks to @mikedld
New Czech localization thanks to @p-bo
MySQL autho module thanks to @tioigor96
Various bugfixes thanks to @tschoening and @ashway83
Huge support effort from @tom077!
Thanks to everyone who's helped bring this project back up to speed!

-------------------------------------
    5.0-5   2016-01-08
-------------------------------------
PHP 7 support

-------------------------------------
    5.0-4   2015-12-07