@@ -22,15 +22,13 @@
 //
 
 # Turn off PHP notices
-error_reporting(E_ALL & ~E_NOTICE & ~E_STRICT & ~E_WARNING);
+@error_reporting(E_ALL & ~E_NOTICE & ~E_STRICT & ~E_WARNING);
 
 global $vbox, $localbrowser, $allowed;
 
 require_once(dirname(__FILE__).'/lib/config.php');
 require_once(dirname(__FILE__).'/lib/utils.php');
 require_once(dirname(__FILE__).'/lib/vboxconnector.php');
-
-error_reporting(E_ALL & ~E_NOTICE & ~E_STRICT & ~E_WARNING);
 
 session_init();
 if(!$_SESSION['valid']) return;
